--- a/catalog.html
+++ b/catalog.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&;subset=latin,cyrillic;display=swap">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/style.min.css">
+    <!-- <link rel="stylesheet" href="css/style.min.css"> -->
     <link rel="icon" href="favicon.ico">
     <link rel="icon" href="img/favicon/icon.svg" type="image/svg+xml">
     <link rel="apple-touch-icon" href="img/favicon/apple-touch-icon.png">
@@ -23,7 +23,7 @@
             <ul class="site-nav">
               <li class="site-nav-item"><a class="site-nav-link" href="#">Студия</a></li>
               <li class="site-nav-item"><a class="site-nav-link" href="#">Клиенты</a></li>
-              <li class="site-nav-item"><a class="site-nav-link" href="#">Магазин</a></li>
+              <li class="site-nav-item"><a class="site-nav-link link-current" href="#">Магазин</a></li>
               <li class="site-nav-item"><a class="site-nav-link" href="#">Контакты</a></li>
             </ul>
             <div class="cart">
@@ -110,14 +110,14 @@
                 </ul>
                 <ul class="filter-sort-buttons">
                   <li class="filter-sort-button">
-                    <button type="button" class="button-down">
+                    <a class="button-down" href="#">
                       <span class="visually-hidden">По убыванию:</span>
-                    </button>
+                    </a>
                   </li>
                   <li class="filter-sort-button">
-                    <button type="button" class="button-up">
+                    <a class="button-up" href="#">
                       <span class="visually-hidden">По возрастанию:</span>
-                    </button>
+                    </a>
                   </li>
                 </ul>
               </div>
