--- a/catalog.html
+++ b/catalog.html
@@ -93,7 +93,7 @@
                   </li>
                 </ul>
               </fieldset>
-              <button class="button button-catalog-filter" type="submit">Показать</button>
+              <button class="button-catalog-filter" type="submit">Показать</button>
             </form>
           </div>
         </section>
@@ -104,7 +104,7 @@
               <div class="filter-sort">
                 <p class="filter-heading">Сортировать:</p>
                 <ul class="filter-sort-list">
-                  <li class="filter-sort-option"><a class="filter-sort-current" href="#">По цене</a></li>
+                  <li class="filter-sort-option filter-sort-current"><a href="#">По цене</a></li>
                   <li class="filter-sort-option"><a href="#">По типу</a></li>
                   <li class="filter-sort-option"><a href="#">По названию</a></li>
                 </ul>
@@ -129,7 +129,7 @@
                       <svg width="360" height="40" viewBox="0 0 360 40" fill="none" xmlns="http://www.w3.org/2000/svg">
                       <path fill-rule="evenodd" clip-rule="evenodd" d="M4 0H356C358.2 0 360 1.8 360 4V40H0V4C0 1.8 1.8 0 4 0ZM16.9288 23.5C18.1792 25.6658 20.4901 27 22.991 27C26.857 27 29.991 23.866 29.991 20C29.991 16.134 26.857 13 22.991 13C20.4901 13 18.1792 14.3342 16.9288 16.5C15.6784 18.6658 15.6784 21.3342 16.9288 23.5ZM46.002 27C43.5011 27 41.1902 25.6658 39.9398 23.5C38.6893 21.3342 38.6893 18.6658 39.9398 16.5C41.1902 14.3342 43.5011 13 46.002 13C49.8679 13 53.002 16.134 53.002 20C53.002 23.866 49.8679 27 46.002 27ZM62.9508 23.5C64.2012 25.6658 66.5121 27 69.0129 27C72.8789 27 76.0129 23.866 76.0129 20C76.0129 16.134 72.8789 13 69.0129 13C66.5121 13 64.2012 14.3342 62.9508 16.5C61.7003 18.6658 61.7003 21.3342 62.9508 23.5Z" fill="#4D4D4D"/>
                       </svg>
-                      <img src="img/catalog/catalog-sedona-1.jpg" alt="превью Седона" width="358" height="577">
+                      <img src="img/catalog/catalog-sedona-1.jpg" alt="превью Седона" width="360" height="577">
                       <div class="catalog-item-popup">
                         <h3 class="catalog-item-popup-heading">Sedona</h3>
                         <p class="catalog-item-popup-descripton">Информационный сайт<br> для туристов</p>
@@ -141,7 +141,7 @@
                     <svg width="360" height="40" viewBox="0 0 360 40" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path fill-rule="evenodd" clip-rule="evenodd" d="M4 0H356C358.2 0 360 1.8 360 4V40H0V4C0 1.8 1.8 0 4 0ZM16.9288 23.5C18.1792 25.6658 20.4901 27 22.991 27C26.857 27 29.991 23.866 29.991 20C29.991 16.134 26.857 13 22.991 13C20.4901 13 18.1792 14.3342 16.9288 16.5C15.6784 18.6658 15.6784 21.3342 16.9288 23.5ZM46.002 27C43.5011 27 41.1902 25.6658 39.9398 23.5C38.6893 21.3342 38.6893 18.6658 39.9398 16.5C41.1902 14.3342 43.5011 13 46.002 13C49.8679 13 53.002 16.134 53.002 20C53.002 23.866 49.8679 27 46.002 27ZM62.9508 23.5C64.2012 25.6658 66.5121 27 69.0129 27C72.8789 27 76.0129 23.866 76.0129 20C76.0129 16.134 72.8789 13 69.0129 13C66.5121 13 64.2012 14.3342 62.9508 16.5C61.7003 18.6658 61.7003 21.3342 62.9508 23.5Z" fill="#4D4D4D"/>
                     </svg>
-                    <img src="img/catalog/catalog-pink-1.jpg" alt="превью Пинк" width="358" height="578">
+                    <img src="img/catalog/catalog-pink-1.jpg" alt="превью Пинк" width="360" height="578">
                     <div class="catalog-item-popup">
                       <h3 class="catalog-item-popup-heading">Pink app</h3>
                       <p class="catalog-item-popup-descripton">Продуктовый лендинг приложения для iOS и Android</p>
@@ -153,7 +153,7 @@
                     <svg width="360" height="40" viewBox="0 0 360 40" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path fill-rule="evenodd" clip-rule="evenodd" d="M4 0H356C358.2 0 360 1.8 360 4V40H0V4C0 1.8 1.8 0 4 0ZM16.9288 23.5C18.1792 25.6658 20.4901 27 22.991 27C26.857 27 29.991 23.866 29.991 20C29.991 16.134 26.857 13 22.991 13C20.4901 13 18.1792 14.3342 16.9288 16.5C15.6784 18.6658 15.6784 21.3342 16.9288 23.5ZM46.002 27C43.5011 27 41.1902 25.6658 39.9398 23.5C38.6893 21.3342 38.6893 18.6658 39.9398 16.5C41.1902 14.3342 43.5011 13 46.002 13C49.8679 13 53.002 16.134 53.002 20C53.002 23.866 49.8679 27 46.002 27ZM62.9508 23.5C64.2012 25.6658 66.5121 27 69.0129 27C72.8789 27 76.0129 23.866 76.0129 20C76.0129 16.134 72.8789 13 69.0129 13C66.5121 13 64.2012 14.3342 62.9508 16.5C61.7003 18.6658 61.7003 21.3342 62.9508 23.5Z" fill="#4D4D4D"/>
                     </svg>
-                    <img src="img/catalog/catalog-barbershop-1.jpg" alt="превью Бородинский" width="358" height="578">
+                    <img src="img/catalog/catalog-barbershop-1.jpg" alt="превью Бородинский" width="360" height="578">
                     <div class="catalog-item-popup">
                       <h3 class="catalog-item-popup-heading">Barbershop</h3>
                       <p class="catalog-item-popup-descripton">Сайт салона красоты. Для мужчин, да.</p>
@@ -165,7 +165,7 @@
                     <svg width="360" height="40" viewBox="0 0 360 40" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path fill-rule="evenodd" clip-rule="evenodd" d="M4 0H356C358.2 0 360 1.8 360 4V40H0V4C0 1.8 1.8 0 4 0ZM16.9288 23.5C18.1792 25.6658 20.4901 27 22.991 27C26.857 27 29.991 23.866 29.991 20C29.991 16.134 26.857 13 22.991 13C20.4901 13 18.1792 14.3342 16.9288 16.5C15.6784 18.6658 15.6784 21.3342 16.9288 23.5ZM46.002 27C43.5011 27 41.1902 25.6658 39.9398 23.5C38.6893 21.3342 38.6893 18.6658 39.9398 16.5C41.1902 14.3342 43.5011 13 46.002 13C49.8679 13 53.002 16.134 53.002 20C53.002 23.866 49.8679 27 46.002 27ZM62.9508 23.5C64.2012 25.6658 66.5121 27 69.0129 27C72.8789 27 76.0129 23.866 76.0129 20C76.0129 16.134 72.8789 13 69.0129 13C66.5121 13 64.2012 14.3342 62.9508 16.5C61.7003 18.6658 61.7003 21.3342 62.9508 23.5Z" fill="#4D4D4D"/>
                     </svg>
-                    <img src="img/catalog/catalog-mishka-1.jpg" alt="превью Мишка" width="358" height="578">
+                    <img src="img/catalog/catalog-mishka-1.jpg" alt="превью Мишка" width="360" height="578">
                     <div class="catalog-item-popup">
                       <h3 class="catalog-item-popup-heading">Mishka</h3>
                       <p class="catalog-item-popup-descripton">Интернет-магазин вязаных игрушек</p>
@@ -177,7 +177,7 @@
                     <svg width="360" height="40" viewBox="0 0 360 40" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path fill-rule="evenodd" clip-rule="evenodd" d="M4 0H356C358.2 0 360 1.8 360 4V40H0V4C0 1.8 1.8 0 4 0ZM16.9288 23.5C18.1792 25.6658 20.4901 27 22.991 27C26.857 27 29.991 23.866 29.991 20C29.991 16.134 26.857 13 22.991 13C20.4901 13 18.1792 14.3342 16.9288 16.5C15.6784 18.6658 15.6784 21.3342 16.9288 23.5ZM46.002 27C43.5011 27 41.1902 25.6658 39.9398 23.5C38.6893 21.3342 38.6893 18.6658 39.9398 16.5C41.1902 14.3342 43.5011 13 46.002 13C49.8679 13 53.002 16.134 53.002 20C53.002 23.866 49.8679 27 46.002 27ZM62.9508 23.5C64.2012 25.6658 66.5121 27 69.0129 27C72.8789 27 76.0129 23.866 76.0129 20C76.0129 16.134 72.8789 13 69.0129 13C66.5121 13 64.2012 14.3342 62.9508 16.5C61.7003 18.6658 61.7003 21.3342 62.9508 23.5Z" fill="#4D4D4D"/>
                     </svg>
-                    <img src="img/catalog/catalog-aplus-1.jpg" alt="превью А Плюс" width="358" height="578">
+                    <img src="img/catalog/catalog-aplus-1.jpg" alt="превью А Плюс" width="360" height="578">
                     <div class="catalog-item-popup">
                       <h3 class="catalog-item-popup-heading">A Plus</h3>
                       <p class="catalog-item-popup-descripton">Лендинг курсов повышения квалификации</p>
@@ -189,7 +189,7 @@
                     <svg width="360" height="40" viewBox="0 0 360 40" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path fill-rule="evenodd" clip-rule="evenodd" d="M4 0H356C358.2 0 360 1.8 360 4V40H0V4C0 1.8 1.8 0 4 0ZM16.9288 23.5C18.1792 25.6658 20.4901 27 22.991 27C26.857 27 29.991 23.866 29.991 20C29.991 16.134 26.857 13 22.991 13C20.4901 13 18.1792 14.3342 16.9288 16.5C15.6784 18.6658 15.6784 21.3342 16.9288 23.5ZM46.002 27C43.5011 27 41.1902 25.6658 39.9398 23.5C38.6893 21.3342 38.6893 18.6658 39.9398 16.5C41.1902 14.3342 43.5011 13 46.002 13C49.8679 13 53.002 16.134 53.002 20C53.002 23.866 49.8679 27 46.002 27ZM62.9508 23.5C64.2012 25.6658 66.5121 27 69.0129 27C72.8789 27 76.0129 23.866 76.0129 20C76.0129 16.134 72.8789 13 69.0129 13C66.5121 13 64.2012 14.3342 62.9508 16.5C61.7003 18.6658 61.7003 21.3342 62.9508 23.5Z" fill="#4D4D4D"/>
                     </svg>
-                    <img src="img/catalog/catalog-kvast-1.jpg" alt="превью Кваст" width="358" height="578">
+                    <img src="img/catalog/catalog-kvast-1.jpg" alt="превью Кваст" width="360" height="578">
                     <div class="catalog-item-popup">
                       <h3 class="catalog-item-popup-heading">Кваст</h3>
                       <p class="catalog-item-popup-descripton">Промо-сайт производителя крафтового кваса</p>
