--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 <li class="slider-item slide-1 slide-current">
                   <div class="slide-wrapper">
                     <p class="primary-slogan">Долго, дорого, скрупулезно.</p>
-                    <p class="primary-slogan-description">Математически выверенный дизайн для вашего сайта или мобильного приложения.</p>
+                    <p class="primary-slogan-description">Математически выверенный дизайн<br> для вашего сайта или мобильного приложения.</p>
                     <a class="learn-more-button button" href="#">Узнать больше</a>
                   </div>
                 </li>
@@ -157,7 +157,7 @@
             <div class="contacts">
               <p class="contacts-heading">Nёrds design studio</p>
               <p>191186, Санкт-Петербург,<br> ул. Б. Конюшенная, д. 19/8</p>
-              <p>тел.<a class="contacts-phone" href="tel:+78122757575">+7 (812) 275-75-75</a></p>
+              <p class="container-phone">тел.<a class="contacts-phone" href="tel:+78122757575">+7 (812) 275-75-75</a></p>
               <a class="button contacts-button" href="#">Напишите нам</a>
             </div>
           </div>
@@ -189,6 +189,5 @@
           <p><input class="button button-response" type="submit"></p>
         </form>
       </div>
-
   </body>
 </html>
