Убирает пустые строки

--- a/catalog.html
+++ b/catalog.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html class="page" lang="ru">
   <head>
     <meta charset="utf-8">
     <title>Дизайн-студия «Нёрдс»: Каталог готовых шаблонов</title>
@@ -11,9 +11,7 @@
     <link rel="apple-touch-icon" href="img/favicon/apple-touch-icon.png">
     <link rel="manifest" href="/manifest.webmanifest">
   </head>
-
   <body class="page-body">
-
     <header class="main-header main-catalog-header">
       <div class="container">
         <nav class="main-nav">
@@ -33,7 +31,6 @@
         <h1 class="catalog-header">Магазин готовых шаблонов</h1>
       </div>
     </header>
-
     <main>
       <div class="catalog-container">
         <section class="filter-container">
@@ -102,7 +99,6 @@
             </form>
           </div>
         </section>
-
         <section class="products-container">
           <div class="container">
             <h2 class="visually-hidden">Каталог шаблонов</h2>
@@ -126,7 +122,6 @@
                   </li>
                 </ul>
               </div>
-
               <div class="catalog">
                 <ul class="catalog-list">
                   <li class="catalog-item">
@@ -202,7 +197,6 @@
             </div>
           </section>
         </div>
-
         <section class="location">
           <h2 class="visually-hidden">Мы на карте:</h2>
           <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6037872533248!2d30.32085871612592!3d59.93871648187619!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCDQoNC-0YHRgdC40Y8sIDE5MTE4Ng!5e0!3m2!1sru!2s!4v1616321381280!5m2!1sru!2s" width="1160" height="416" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
@@ -215,9 +209,7 @@
               </div>
             </div>
         </section>
-
     </main>
-
     <footer class="page-footer">
       <div class="footer-container">
         <div class="footer-social">
@@ -233,6 +225,5 @@
         </div>
       </div>
     </footer>
-
   </body>
 </html>
