Убирает type у textarea....

--- a/index.html
+++ b/index.html
@@ -168,15 +168,15 @@
           </div>
         </div>
       </footer>
-      <section class="response-popup">
+      <div class="response-popup">
         <p class="response-heading">Напишите нам</p>
         <form class="response-form" action="https://echo.htmlacademy.ru/" method="get">
           <p class="response-item"><label>Ваше имя: <input class="response-cell" type="text" name="response-username" placeholder="Имя фамилия"></label></p>
           <p class="response-item"><label>Ваш email: <input class="response-cell" type="email" name="response-email" placeholder="email@example.com"></label></p>
-          <p class="response-item"><label>Текст письма: <textarea class="response-text" type="text" name="response-text" placeholder="В свободной форме"></textarea></label></p>
+          <p class="response-item"><label>Текст письма: <textarea class="response-text" name="response-text" placeholder="В свободной форме"></textarea></label></p>
           <p><input class="button button-response" type="submit"></p>
         </form>
         <button class="response-close" type="button" aria-label="Закрыть"></button>
-      </section>
+      </div>
   </body>
 </html>
